[package]
name = "rust-actix-juniper-graphql"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "rust-actix-juniper-graphql"

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
dataloader = "0.18.0"
env_logger = "0.11.8"
juniper = "0.16.1"
juniper_subscriptions = "0.17.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }